[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "OpenEnv bug triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "pydantic>=2.8,<3",
  "openai>=2.7.2,<3",
  "httpx<0.28",
  "huggingface_hub>=0.24,<1",
  "python-dotenv>=1.0,<2",
  "fastapi>=0.110,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
server = "server.app:main"
